pfcon-standalone/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pfcon-standalone
  labels:
    app.kubernetes.io/name: pfcon
    app.kubernetes.io/instance: pfcon-standalone
spec:
  to:
    kind: Service
    name: pfcon-standalone
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: http
  host: pfcon-standalone.apps.shift.nerc.mghpcc.org
